# ChessBoto

./: CHESS_CONTINUATION.py  CHESS_CONTINUATION_10.py  CHESS_CONTINUATION_4.py  CHESS_CONTINUATION_REVISED.py  ChessTEst4.ipynb  Chess_Test.py  Chess_Test_3.py  README.md  Sandbox.ipynb  chess_data.txt  chessfunk.ipynb  main.py  pyproject.toml  sandbox.py
.ipynb_checkpoints/: ChessTEst4-checkpoint.ipynb  Sandbox-checkpoint.ipynb
